# umis

./: .cursorrules  .cursorrules_new  .env.backup_20251105  .gitattributes  .gitignore  .gitignore.main.example  .gitignore_main  AGENT_NAME_AUDIT.md  ARCHITECTURE_V3_COMPLETE.md  ARCHITECTURE_V3_IMPLEMENTATION_STATUS.md  BACKUP_AND_RENAME.sh  BATCH_PARSING_FINAL_REPORT.md  BILL_EXCEL_TOOLS_ROADMAP.md  CD_GRADE_IMPROVEMENT_REPORT.md  CHANGELOG.md  CHROMADB_FILTER_PERFORMANCE_ANALYSIS.yaml  COMPREHENSIVE_AUDIT.md  COMPREHENSIVE_REFACTOR_COMPLETE.md  CONTEXT_WINDOW_STRATEGY.md  CRAWLING_TODO.md  CURRENT_STATUS.md  DART_API_LIMITATION_ANALYSIS.md  DART_SGA_COMPLETE.md  DEPENDENCY_IMPROVEMENT_SUMMARY.md  DEPLOYMENT_STRATEGY_SUMMARY.md  DUAL_INDEX_IMPLEMENTATION_CHECK.md  DUAL_INDEX_MISSING_ITEMS.md  DUAL_INDEX_STATUS.md  EXCEL_SHEET_SPECS.yaml  FINAL_ORGANIZATION_REPORT_20251105.md  FINAL_PARSING_REPORT_20251115.md  FINAL_SESSION_SUMMARY.md  FINAL_SESSION_SUMMARY_20251116.md  FINAL_STATUS.md  FINAL_STRUCTURE.md  FINAL_UNIT_ECONOMICS_REPORT.md  GITHUB_RELEASE_GUIDE.md  GIT_DIFF_ANALYSIS.md  GOOGLE_DRIVE_SETUP.md  GUESTIMATION_CHUNKING_STRATEGY.yaml  (+105 more)
.chatgpt/: chatgpt_custom_instructions.txt  chatgpt_project_setup.md
archive/: ARCHIVE_REPORT_20251120.md  README.md
benchmarks/: MIGRATION_PLAN.md  README.md  __init__.py
config/: README.md  agent_names.yaml  fermi_model_search.yaml  learned_sga_patterns.yaml  llm_mode.yaml  migration_rules.yaml  model_configs.yaml  multilayer_config.yaml  overlay_layer.yaml  pattern_relationships.yaml  projection_rules.yaml  routing_policy.yaml  runtime.yaml  schema_registry.yaml  tool_registry.yaml  tool_registry_sample.yaml  web_search.env.template
data/: corps_list_final.txt  corps_list_test.txt  llm_projection_log.jsonl  pattern_relationships.yaml
deliverable_specs/: README.md
dev_docs/: CLEANUP_COMPLETE_v7_11_0.md  CLEANUP_PLAN_FOLDERS_v7_11_0.md  CLEANUP_PLAN_v7_11_0.md  COMPLETENESS_ANALYSIS.md  CONTEXT_COMPLETION_REPORT.md  CURRENT_STATUS.md  DEPENDENCY_GRAPH.md  ESTIMATOR_SINGLE_SOURCE_DESIGN.md  FAILURE_PATTERN_INTEGRATION_V7_8_0.md  FINAL_CLEANUP_STATUS_V7.5.0.md  FINAL_CLEANUP_SUMMARY.md  FINAL_COMPLETION_REPORT_20251112.md  FINAL_DAY_SUMMARY_20251112.md  GAP1_100PCT_COMPLETE.md  GAP1_COMPLETION_REPORT.md  GAP1_FINAL_STATUS.md  GAP2_DESIGN_DOCUMENT.md  GAP3_DESIGN_DOCUMENT.md  IMPLEMENTATION_SUMMARY_20251112.md  INDEX.md  INVESTOR_DUPLICATES_REVIEW.md  MARKET_ANALYSIS_COVERAGE_CHECK.md  MERMAID_TIMELINE_TEMPLATES.md  PATTERN_ENRICHMENT_ROADMAP.md  (+35 more)
rag/config/: env.template  pyproject.toml  requirements-dev.txt  requirements.txt
(+1647 files in other folders)
